Require Jenkins 2.479.3 or newer (#126)